# CustomLogger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
logger/: __init__.py  logger.py
test/: test_logger.py
