[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_logger"
version = "0.1.0"
description = "Uma ferramenta para gerar Logs customizados."
readme = "README.md"
authors = [{ name = "Aluan Luiz Maturi Horschutz" }]
license = { text = "MIT" }
requires-python = ">=3.9, <4"

[project.urls]
Homepage = "https://github.com/AluanLuiz/CustomLogger"

[project.classifiers]
dynamic = ["classifiers"]