[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_logger"
version = "0.1.0"
description = "Uma ferramenta para gerar Logs customizados."
readme = "README.md"
authors = [{ name = "Aluan Luiz Maturi Horschutz" }]
license = { text = "MIT" }
requires-python = ">=3.9, <4"
dependencies = []

[project.urls]
Homepage = "https://github.com/AluanLuiz/CustomLogger"

[project.classifiers]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]